# pynix

./: README.rst  dos.py  main.py  setup.cfg  setup.py
linux_commands/: cd.py  clear.py  cp.py  date.py  diff.py  echo.py  exit.py  grep.py  man.py  mkdir.py  mv.py  pwd.py  rm.py
src/pynix/: dos.py  main.py  pynix.py
src/pynix/linux_commands/: ls.py
