[metadata]
name = <pynix>
version = <version number: 0.0.0>
license = <GNU General Public License v3.0>
description = <Python executable to use Linux and Unix command line on the Windows platform>
long_description = file: README.rst
author = <Author name>
author_email = <gng10836@gmail.com>
classifiers=
   Development Status :: 1 - Planning
   Programming Language :: Python :: 3.9.5

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   

[options.packages.find]
where=src