[metadata]
name = <pynix>
version = <version number: 0.0.0>
license = <GNU General Public License v3.0>
description = <Python executable to use Linux and Unix command line on the Windows platform>
long_description = file: README.rst
author = <bmbno>
classifiers=
   <Development Status :: 1 - Planning>


[options]
packages = find:
package_dir =
    =src/pynix
include_package_data = True
install_requires =
   

[options.packages.find]
where=src/pynix